# exse

./: README.md  pyproject.toml
src/exse/: __init__.py  __main__.py  caching.py  constants.py  daemon.py  pmanager.py  ui.py  util.py
src/exse/tui/: __init__.py
src/exse/web/: __init__.py  player.js  playlist_entry.js  song_entry.js
src/exse/yt/: __init__.py  __main__.py  daemon.py
